--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bootstrap intro</title>
+  <title>Bootstrap intro: Volume</title>
 
 
   <!-- jQuery -->
@@ -153,16 +153,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="http://fillmurray.com/300/500"
-                class="d-block w-100" alt="..." width="200" height="200">
+              <img src="http://fillmurray.com/300/500" class="d-block w-100" alt="..." width="200" height="200">
             </div>
             <div class="carousel-item">
-              <img src="http://fillmurray.com/300/410"
-                class="d-block w-100" alt="..." width="200" height="200">
+              <img src="http://fillmurray.com/300/410" class="d-block w-100" alt="..." width="200" height="200">
             </div>
             <div class="carousel-item">
-              <img src="http://fillmurray.com/300/450"
-                class="d-block w-100" alt="..." width="200" height="200">
+              <img src="http://fillmurray.com/300/450" class="d-block w-100" alt="..." width="200" height="200">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
